examples/test/testpolicy16197.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16197
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key47: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value0
          key21: value41
          key48: value8
      podSelector:
        matchLabels:
          key20: value15
          key43: value48
